trunk/Archive2/c3/6c2bfd706d5458/output
main.cpp: In function 'int main()':
main.cpp:13:23: error: aggregate 'TD<int*&&> td1' has incomplete type and cannot be defined
     TD<decltype(arg)> td1;
                       ^
